syntax = "proto3";
package svc;
option go_package = "microsvc/protocol/svc";

import "include/google/protobuf/any.proto";

// 由客户端提供此结构体信息
message BaseExtReq {
  string app = 1; // client app package name
  string app_version = 2;
  //...
  map<string, string> extension = 10;
}

message AdminBaseReq{
  int64 uid = 1;
  string nick = 2;
  // ...
  map<string, string> extension = 10;
}

message HttpCommonRsp{
  int32 code = 1;
  string msg = 2;
  google.protobuf.Any data = 3;
}

message BaseRes{
  int32 code = 1;
  string msg = 2;
}